# reservoir-maps

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: calculation_parameters.py  data_wells.pkl  map_NNT.npy  map_initial_oil_saturation.npy  map_porosity.npy  maps_metadata.json  reservoir_state_maps.ipynb  run_example.py  test.py
notebooks/: So_current + interference_all_points+fractures.ipynb
reservoir_maps/: __init__.py  current_saturation.py  data_processing.py  input.py  memory.py  one_phase_model.py  reserves.py  result.py  utils.py  water_cut.py  well_interference.py
tests/: calculation_parameters.py  test.py  test_input.py  test_result.py
