[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reservoir-maps"
version = "0.1.0"
authors = [
    { name = "Alina Murzakova", email = "alinagab1993@gmail.com" },
    { name = "Anastasia Rybakovskaya", email = "na.rybakovskaya@gmail.com" }
]
description = "The module is for calculating reservoir state maps: current saturation, water cut, residual oil reserves."
readme = "README.md"
requires-python = ">=3.8, <3.13"
license = { text = "MIT" }
keywords = ["current saturation", "current oil saturation", "water cut", "residual oil reserves", "residual recoverable reserves"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: GIS"
]
dependencies = [
    "numpy~=1.26.4",
    "scipy~=1.14.0",
    "pandas~=2.2.3",
    "scikit-image~=0.25.2",
    "numba~=0.61.2"
]

[project.urls]
Repository = "https://github.com/Alina-Murzakova/reservoir_maps.git"

[tool.pytest.ini_options]
pythonpath = ["."]
